# oop2_Legend_of_Zelda

./: CMakeLists.txt  CMakePresets.json  InstallGame.bat  InstallGame.ps1  README.md  TODO  objects-to-int.txt
cmake/: SFML.cmake  Zip.cmake
include/: Animation.h  Board.h  Button.h  CMakeLists.txt  CollisionHandling.h  Controller.h  Destructible.h  Enemy.h  ExitButton.h  Factory.h  GameObject.h  GameObjects.h  HelpButton.h  InDestructible.h  Link.h  LinkAttackState.h  LinkMoveState.h  MainMenu.h  Map.h  MovingObjects.h  Octorok.h  Pot.h  Resources.h  SettingsButton.h  StartButton.h  StaticObjects.h  Utilities.h  Wall.h
include/Buttons/: BackButton.h  BackToGameButton.h  BackToMenuButton.h  Button.h  ExitButton.h  HelpButton.h  LoadButton.h  SaveButton.h  SettingsButton.h  StartButton.h  VolumeDownButton.h  VolumeSlider.h  VolumeUpButton.h
include/Exeptions/: BadFileFormat.h  BadFileName.h
include/GameStates/: DeathState.h  GameOverState.h  GameRunningState.h  HelpState.h  LoadGameState.h  MainMenu.h  NewGameState.h  PauseMenu.h  SaveState.h  SettingState.h  State.h  SwitchLevelState.h  VictoryState.h
include/Misc/: Animation.h  CollisionHandling.h  ColorAnimation.h  Factory.h  HitBox.h  LinkObserver.h  LinkSubject.h  Map.h  StatusBar.h  Utilities.h
include/MovingObjects/: Boulder.h  LinkArrow.h  MovingObjects.h  OctorokProjectile.h  Projectile.h  Projectiles.h  Sword.h  Weapon.h
include/MovingObjects/Animate/: Animate.h  Zelda.h
include/MovingObjects/Enemies/: AttackingState.h  Enemy.h  EnemySword.h  MovementStrategy.h  (+8 more)
include/ResourcesManager/: Resources.h  SoundResource.h
include/StaticObjects/: Destructible.h  Door.h  Hole.h  InDestructible.h  KeyTile.h  Pot.h  Shield.h  Shrub.h  Sign.h  StaticObjects.h  Wall.h  WaterTile.h
resources/: BossDungeon.csv  CMakeLists.txt  Dungeon.csv  Dungeon03.csv  Home.csv  Map.csv  dungeon01.csv
src/: Animation.cpp  Board.cpp  Button.cpp  CMakeLists.txt  CollisionHandling.cpp  Controller.cpp  Destructible.cpp  Factory.cpp  GameObject.cpp  GameObjects.cpp  GameState.h  InDestructible.cpp  Link.cpp  LinkAttackState.cpp  LinkMoveState.cpp  LinkStandingState.cpp  MainMenu.cpp  Map.cpp  MovingObjects.cpp  Octorok.cpp  Pot.cpp  Resources.cpp  SettingsButton.cpp  StartButton.cpp  StaticObjects.cpp  Wall.cpp  main.cpp
src/Buttons/: BackButton.cpp  BackToGameButton.cpp  BackToMenuButton.cpp  Button.cpp  ExitButton.cpp  HelpButton.cpp  LoadButton.cpp  SaveButton.cpp  SettingsButton.cpp  StartButton.cpp  VolumeDownButton.cpp  VolumeSlider.cpp  VolumeUpButton.cpp
src/GameStates/: DeathState.cpp  GameOverState.cpp  GameRunningState.cpp  HelpState.cpp  LoadGameState.cpp  MainMenu.cpp  NewGameState.cpp  PauseMenu.cpp  SaveState.cpp  SettingState.cpp  State.cpp  SwitchLevelState.cpp  VictoryState.cpp
src/Misc/: Animation.cpp  CollisionHandling.cpp  ColorAnimation.cpp  Factory.cpp  HitBox.cpp  Map.cpp  StatusBar.cpp
src/MovingObjects/: Boulder.cpp  MovingObjects.cpp  OctorokProjectile.cpp  Projectile.cpp  Projectiles.cpp  Sword.cpp
src/ResourcesManager/: Resources.cpp  SoundResource.cpp
src/StaticObjects/: Destructible.cpp  Door.cpp  Hole.cpp  InDestructible.cpp  KeyTile.cpp  Pot.cpp  Shield.cpp  Shrub.cpp  Sign.cpp  StaticObjects.cpp  Wall.cpp  WaterTile.cpp
(+97 files in other folders)
